--- a/src/i18n/locale/uz.json
+++ b/src/i18n/locale/uz.json
@@ -10,7 +10,7 @@
     "homeTitle2": "imkoniyatlarni",
     "homeTitle3": "biz bilan",
     "homeTitle4": "toping",
-    "exploreTitle": "Egn yaxshi imkoniyatlarni biz bilan toping...",
+    "exploreTitle": "Eng yaxshi imkoniyatlarni biz bilan toping...",
     "yourName": "Ismingiz",
     "yourEmail": "Emailingiz",
     "yourPassword": "Parolingiz",
